// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`printToDot > computedAmazonView 1`] = `
"digraph {
  layout = "dot";
  compound = true;
  pad = 0.2084;
  rankdir = "TB";
  outputorder = "nodesfirst";
  nodesep = 0.9375;
  ranksep = "0.9375 equally";
  graph [
    fontname = "Helvetica";
    labeljust = "l";
    fontsize = 9;
  ];
  edge [
    fontname = "Helvetica";
    fontsize = 10.5;
    style = "solid";
    penwidth = 2;
    arrowsize = 0.75;
    color = "#a3a3a3";
    fontcolor = "#d4d4d4";
    nojustify = true;
  ];
  node [
    fontname = "Helvetica";
    fontsize = 14.25;
    shape = "rect";
    width = 3.3334;
    height = 1.875;
    style = "filled,rounded";
    fillcolor = "#3b82f6";
    margin = 0.2084;
    penwidth = 0;
  ];
  "backend" [
    likec4_id = "cloud.backend";
    likec4_level = 1;
    label = <<FONT COLOR="#eff6ff" POINT-SIZE="14.25">Backend</FONT>>;
  ];
  "s3" [
    likec4_id = "amazon.s3";
    likec4_level = 1;
    label = <<TABLE BORDER="0" CELLBORDER="0" CELLPADDING="0" CELLSPACING="7"><TR><TD><FONT COLOR="#eff6ff" POINT-SIZE="14.25">S3</FONT></TD></TR><TR><TD><FONT COLOR="#dbeafe" POINT-SIZE="10.5">S3 is a storage service</FONT></TD></TR></TABLE>>;
  ];
  subgraph "cluster_1" {
    likec4_id = "cloud";
    likec4_level = 0;
    style = "rounded";
    margin = 30;
    fontsize = 9.75;
    label = <<B>CLOUD</B>>;
    likec4_depth = 1;
    "backend";
  }
  subgraph "cluster_2" {
    likec4_id = "amazon";
    likec4_level = 0;
    style = "rounded";
    margin = 30;
    fontsize = 9.75;
    label = <<B>AMAZON</B>>;
    likec4_depth = 1;
    "s3";
  }
  "backend" -> "s3" [
    likec4_id = "cloud.backend:amazon.s3";
    label = <<TABLE BORDER="0" CELLBORDER="0" CELLPADDING="3" CELLSPACING="0"><TR><TD><FONT POINT-SIZE="10.5">persists artifacts</FONT></TD></TR></TABLE>>;
  ];
}"
`;

exports[`printToDot > computedCloud3levels 1`] = `
"digraph {
  layout = "dot";
  compound = true;
  pad = 0.2084;
  rankdir = "TB";
  outputorder = "nodesfirst";
  nodesep = 0.9375;
  ranksep = "0.9375 equally";
  graph [
    fontname = "Helvetica";
    labeljust = "l";
    fontsize = 9;
  ];
  edge [
    fontname = "Helvetica";
    fontsize = 10.5;
    style = "solid";
    penwidth = 2;
    arrowsize = 0.75;
    color = "#a3a3a3";
    fontcolor = "#d4d4d4";
    nojustify = true;
  ];
  node [
    fontname = "Helvetica";
    fontsize = 14.25;
    shape = "rect";
    width = 3.3334;
    height = 1.875;
    style = "filled,rounded";
    fillcolor = "#3b82f6";
    margin = 0.2084;
    penwidth = 0;
  ];
  "support" [
    likec4_id = "support";
    likec4_level = 0;
    label = <<TABLE BORDER="0" CELLBORDER="0" CELLPADDING="0" CELLSPACING="7"><TR><TD><FONT COLOR="#eff6ff" POINT-SIZE="14.25">Support Engineer</FONT></TD></TR><TR><TD><FONT COLOR="#dbeafe" POINT-SIZE="10.5">Support engineers are responsible for<BR/>supporting customers<BR/></FONT></TD></TR></TABLE>>;
  ];
  "customer" [
    likec4_id = "customer";
    likec4_level = 0;
    label = <<FONT COLOR="#eff6ff" POINT-SIZE="14.25">customer</FONT>>;
  ];
  "adminpanel" [
    likec4_id = "cloud.frontend.adminPanel";
    likec4_level = 1;
    label = <<TABLE BORDER="0" CELLBORDER="0" CELLPADDING="0" CELLSPACING="7"><TR><TD><FONT COLOR="#eff6ff" POINT-SIZE="14.25">Admin Panel Webapp</FONT></TD></TR><TR><TD><FONT COLOR="#dbeafe" POINT-SIZE="10.5">The admin panel is a webapp that allows<BR/>support staff to manage customer data.<BR/></FONT></TD></TR></TABLE>>;
  ];
  "dashboard" [
    likec4_id = "cloud.frontend.dashboard";
    likec4_level = 1;
    label = <<TABLE BORDER="0" CELLBORDER="0" CELLPADDING="0" CELLSPACING="7"><TR><TD><FONT COLOR="#eff6ff" POINT-SIZE="14.25">Customer Dashboard Webapp</FONT></TD></TR><TR><TD><FONT COLOR="#dbeafe" POINT-SIZE="10.5">The customer dashboard is a webapp that<BR/>allows customers to view their data.<BR/></FONT></TD></TR></TABLE>>;
  ];
  "graphql" [
    likec4_id = "cloud.backend.graphql";
    likec4_level = 2;
    label = <<TABLE BORDER="0" CELLBORDER="0" CELLPADDING="0" CELLSPACING="7"><TR><TD><FONT COLOR="#eff6ff" POINT-SIZE="14.25">Graphql API</FONT></TD></TR><TR><TD><FONT COLOR="#dbeafe" POINT-SIZE="10.5">Component that allows to query data via<BR/>GraphQL.<BR/></FONT></TD></TR></TABLE>>;
  ];
  "storage" [
    likec4_id = "cloud.backend.storage";
    likec4_level = 2;
    label = <<TABLE BORDER="0" CELLBORDER="0" CELLPADDING="0" CELLSPACING="7"><TR><TD><FONT COLOR="#eff6ff" POINT-SIZE="14.25">Backend Storage</FONT></TD></TR><TR><TD><FONT COLOR="#dbeafe" POINT-SIZE="10.5">The backend storage is a component that<BR/>stores data.<BR/></FONT></TD></TR></TABLE>>;
    color = "#2563eb";
    penwidth = 2;
    shape = "cylinder";
  ];
  "amazon" [
    likec4_id = "amazon";
    likec4_level = 0;
    label = <<TABLE BORDER="0" CELLBORDER="0" CELLPADDING="0" CELLSPACING="7"><TR><TD><FONT COLOR="#eff6ff" POINT-SIZE="14.25">Amazon</FONT></TD></TR><TR><TD><FONT COLOR="#dbeafe" POINT-SIZE="10.5">Amazon is a cloud provider</FONT></TD></TR></TABLE>>;
  ];
  subgraph "cluster_1" {
    likec4_id = "cloud";
    likec4_level = 0;
    style = "rounded";
    margin = 30;
    fontsize = 9.75;
    label = <<B>CLOUD</B>>;
    likec4_depth = 2;
    "adminpanel";
    "dashboard";
    subgraph "cluster_2" {
      likec4_id = "cloud.backend";
      likec4_level = 1;
      style = "rounded";
      margin = 30;
      fontsize = 9.75;
      label = <<B>BACKEND</B>>;
      likec4_depth = 1;
      "graphql";
      "storage";
      "graphql" -> "storage" [
        likec4_id = "cloud.backend.graphql:cloud.backend.storage";
      ];
    }
    "adminpanel" -> "graphql" [
      likec4_id = "cloud.frontend.adminPanel:cloud.backend.graphql";
      label = <<TABLE BORDER="0" CELLBORDER="0" CELLPADDING="3" CELLSPACING="0"><TR><TD><FONT POINT-SIZE="10.5">fetches data in zero trust network with sso<BR/>authentification<BR ALIGN="LEFT"/></FONT></TD></TR></TABLE>>;
    ];
    "dashboard" -> "graphql" [
      likec4_id = "cloud.frontend.dashboard:cloud.backend.graphql";
      label = <<TABLE BORDER="0" CELLBORDER="0" CELLPADDING="3" CELLSPACING="0"><TR><TD><FONT POINT-SIZE="10.5">fetches data</FONT></TD></TR></TABLE>>;
    ];
  }
  "storage" -> "amazon" [
    likec4_id = "cloud.backend.storage:amazon";
    label = <<TABLE BORDER="0" CELLBORDER="0" CELLPADDING="3" CELLSPACING="0"><TR><TD><FONT POINT-SIZE="10.5">persists artifacts</FONT></TD></TR></TABLE>>;
  ];
  "support" -> "adminpanel" [
    likec4_id = "support:cloud.frontend.adminPanel";
    label = <<TABLE BORDER="0" CELLBORDER="0" CELLPADDING="3" CELLSPACING="0"><TR><TD><FONT POINT-SIZE="10.5">manages</FONT></TD></TR></TABLE>>;
  ];
  "customer" -> "dashboard" [
    likec4_id = "customer:cloud.frontend.dashboard";
    label = <<TABLE BORDER="0" CELLBORDER="0" CELLPADDING="3" CELLSPACING="0"><TR><TD><FONT POINT-SIZE="10.5">opens in browser</FONT></TD></TR></TABLE>>;
  ];
}"
`;

exports[`printToDot > computedCloudView 1`] = `
"digraph {
  layout = "dot";
  compound = true;
  pad = 0.2084;
  rankdir = "TB";
  outputorder = "nodesfirst";
  nodesep = 0.9375;
  ranksep = "0.9375 equally";
  graph [
    fontname = "Helvetica";
    labeljust = "l";
    fontsize = 9;
  ];
  edge [
    fontname = "Helvetica";
    fontsize = 10.5;
    style = "solid";
    penwidth = 2;
    arrowsize = 0.75;
    color = "#a3a3a3";
    fontcolor = "#d4d4d4";
    nojustify = true;
  ];
  node [
    fontname = "Helvetica";
    fontsize = 14.25;
    shape = "rect";
    width = 3.3334;
    height = 1.875;
    style = "filled,rounded";
    fillcolor = "#3b82f6";
    margin = 0.2084;
    penwidth = 0;
  ];
  "support" [
    likec4_id = "support";
    likec4_level = 0;
    label = <<TABLE BORDER="0" CELLBORDER="0" CELLPADDING="0" CELLSPACING="7"><TR><TD><FONT COLOR="#eff6ff" POINT-SIZE="14.25">Support Engineer</FONT></TD></TR><TR><TD><FONT COLOR="#dbeafe" POINT-SIZE="10.5">Support engineers are responsible for<BR/>supporting customers<BR/></FONT></TD></TR></TABLE>>;
  ];
  "customer" [
    likec4_id = "customer";
    likec4_level = 0;
    label = <<FONT COLOR="#eff6ff" POINT-SIZE="14.25">customer</FONT>>;
  ];
  "frontend" [
    likec4_id = "cloud.frontend";
    likec4_level = 1;
    label = <<FONT COLOR="#eff6ff" POINT-SIZE="14.25">Frontend</FONT>>;
  ];
  "backend" [
    likec4_id = "cloud.backend";
    likec4_level = 1;
    label = <<FONT COLOR="#eff6ff" POINT-SIZE="14.25">Backend</FONT>>;
  ];
  "amazon" [
    likec4_id = "amazon";
    likec4_level = 0;
    label = <<TABLE BORDER="0" CELLBORDER="0" CELLPADDING="0" CELLSPACING="7"><TR><TD><FONT COLOR="#eff6ff" POINT-SIZE="14.25">Amazon</FONT></TD></TR><TR><TD><FONT COLOR="#dbeafe" POINT-SIZE="10.5">Amazon is a cloud provider</FONT></TD></TR></TABLE>>;
  ];
  subgraph "cluster_1" {
    likec4_id = "cloud";
    likec4_level = 0;
    style = "rounded";
    margin = 30;
    fontsize = 9.75;
    label = <<B>CLOUD</B>>;
    likec4_depth = 1;
    "frontend";
    "backend";
    "frontend" -> "backend" [
      likec4_id = "cloud.frontend:cloud.backend";
      label = <<TABLE BORDER="0" CELLBORDER="0" CELLPADDING="3" CELLSPACING="0"><TR><TD><FONT POINT-SIZE="10.5">fetches data</FONT></TD></TR></TABLE>>;
    ];
  }
  "backend" -> "amazon" [
    likec4_id = "cloud.backend:amazon";
    label = <<TABLE BORDER="0" CELLBORDER="0" CELLPADDING="3" CELLSPACING="0"><TR><TD><FONT POINT-SIZE="10.5">persists artifacts</FONT></TD></TR></TABLE>>;
  ];
  "support" -> "frontend" [
    likec4_id = "support:cloud.frontend";
    label = <<TABLE BORDER="0" CELLBORDER="0" CELLPADDING="3" CELLSPACING="0"><TR><TD><FONT POINT-SIZE="10.5">manages</FONT></TD></TR></TABLE>>;
  ];
  "customer" -> "frontend" [
    likec4_id = "customer:cloud.frontend";
    label = <<TABLE BORDER="0" CELLBORDER="0" CELLPADDING="3" CELLSPACING="0"><TR><TD><FONT POINT-SIZE="10.5">opens in browser</FONT></TD></TR></TABLE>>;
  ];
}"
`;

exports[`printToDot > computedIndexView 1`] = `
"digraph {
  layout = "dot";
  compound = true;
  pad = 0.2084;
  rankdir = "TB";
  outputorder = "nodesfirst";
  nodesep = 0.9375;
  ranksep = "0.9375 equally";
  graph [
    fontname = "Helvetica";
    labeljust = "l";
    fontsize = 9;
  ];
  edge [
    fontname = "Helvetica";
    fontsize = 10.5;
    style = "solid";
    penwidth = 2;
    arrowsize = 0.75;
    color = "#a3a3a3";
    fontcolor = "#d4d4d4";
    nojustify = true;
  ];
  node [
    fontname = "Helvetica";
    fontsize = 14.25;
    shape = "rect";
    width = 3.3334;
    height = 1.875;
    style = "filled,rounded";
    fillcolor = "#3b82f6";
    margin = 0.2084;
    penwidth = 0;
  ];
  "support" [
    likec4_id = "support";
    likec4_level = 0;
    label = <<TABLE BORDER="0" CELLBORDER="0" CELLPADDING="0" CELLSPACING="7"><TR><TD><FONT COLOR="#eff6ff" POINT-SIZE="14.25">Support Engineer</FONT></TD></TR><TR><TD><FONT COLOR="#dbeafe" POINT-SIZE="10.5">Support engineers are responsible for<BR/>supporting customers<BR/></FONT></TD></TR></TABLE>>;
  ];
  "customer" [
    likec4_id = "customer";
    likec4_level = 0;
    label = <<FONT COLOR="#eff6ff" POINT-SIZE="14.25">customer</FONT>>;
  ];
  "cloud" [
    likec4_id = "cloud";
    likec4_level = 0;
    label = <<FONT COLOR="#eff6ff" POINT-SIZE="14.25">cloud</FONT>>;
  ];
  "amazon" [
    likec4_id = "amazon";
    likec4_level = 0;
    label = <<TABLE BORDER="0" CELLBORDER="0" CELLPADDING="0" CELLSPACING="7"><TR><TD><FONT COLOR="#eff6ff" POINT-SIZE="14.25">Amazon</FONT></TD></TR><TR><TD><FONT COLOR="#dbeafe" POINT-SIZE="10.5">Amazon is a cloud provider</FONT></TD></TR></TABLE>>;
  ];
  "cloud" -> "amazon" [
    likec4_id = "cloud:amazon";
    label = <<TABLE BORDER="0" CELLBORDER="0" CELLPADDING="3" CELLSPACING="0"><TR><TD><FONT POINT-SIZE="10.5">persists artifacts</FONT></TD></TR></TABLE>>;
  ];
  "support" -> "cloud" [
    likec4_id = "support:cloud";
    label = <<TABLE BORDER="0" CELLBORDER="0" CELLPADDING="3" CELLSPACING="0"><TR><TD><FONT POINT-SIZE="10.5">manages</FONT></TD></TR></TABLE>>;
  ];
  "customer" -> "cloud" [
    likec4_id = "customer:cloud";
    label = <<TABLE BORDER="0" CELLBORDER="0" CELLPADDING="3" CELLSPACING="0"><TR><TD><FONT POINT-SIZE="10.5">opens in browser</FONT></TD></TR></TABLE>>;
  ];
}"
`;
